--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,11 @@
-streamlit-echarts==0.4.0
+jieba==0.42.1
+matplotlib==3.7.2
+numpy==1.24.3
+pandas==1.5.3
+pandas==2.0.3
+Pillow==9.4.0
+pyecharts==2.0.4
+Requests==2.31.0
+streamlit==1.27.2
+streamlit_echarts==0.4.0
+wordcloud==1.9.2
